Added suppl to 2021-1 articles

--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,7 @@ issues:
     - KMsurv
     CTV_rev: Survival
     landing: '2021'
+    suppl: 2.3 Kb
   - slug: RJ-2021-028
     title: 'JMcmprsk: An R Package for Joint Modelling of Longitudinal and Survival
       Data with Competing Risks'
@@ -96,6 +97,7 @@ issues:
     acknowledged: '2020-04-04'
     online: '2021-06-07'
     landing: '2021'
+    suppl: 1.6 Kb
   - slug: RJ-2021-029
     title: Wide-to-tall Data Reshaping Using Regular Expressions and the nc Package
     bibtitle: |-
@@ -135,6 +137,7 @@ issues:
     - Phylogenetics
     - TeachingStatistics
     landing: '2021'
+    suppl: 136.9 Kb
   - slug: RJ-2021-030
     title: 'Linear Regression with Stationary Errors : the R Package slm'
     bibtitle: 'Linear Regression with Stationary Errors : the R Package slm'
@@ -167,6 +170,7 @@ issues:
     - Robust
     - SocialSciences
     landing: '2021'
+    suppl: 3.6 Kb
   - slug: RJ-2021-031
     title: 'exPrior: An R Package for the Formulation of Ex-Situ Priors'
     bibtitle: 'exPrior: An R Package for the Formulation of Ex-Situ Priors'
@@ -252,6 +256,7 @@ issues:
     - Phylogenetics
     - TeachingStatistics
     landing: '2021'
+    suppl: 1.3 Kb
   - slug: RJ-2021-033
     title: Benchmarking R packages for calculation of persistent homology
     bibtitle: |-
@@ -297,6 +302,7 @@ issues:
     - Spatial
     - TeachingStatistics
     landing: '2021'
+    suppl: 151.5 Kb
   - slug: RJ-2021-034
     title: Statistical Quality Control with the qcr Package
     bibtitle: Statistical Quality Control with the qcr Package
@@ -337,6 +343,7 @@ issues:
     - MPCI
     - edcc
     landing: '2021'
+    suppl: 1.5 Kb
   - slug: RJ-2021-035
     title: 'pdynmc: A Package for Estimating Linear Dynamic Panel Data Models Based
       on Nonlinear Moment Conditions'
@@ -420,6 +427,7 @@ issues:
     - MachineLearning
     - SocialSciences
     landing: '2021'
+    suppl: 2.7 Kb
   - slug: RJ-2021-038
     title: 'IndexNumber: An R Package for measuring the evolution of magnitudes'
     bibtitle: |-
@@ -445,6 +453,7 @@ issues:
     online: '2021-06-07'
     CRANpkgs: IndexNumber
     landing: '2021'
+    suppl: 482 bytes
   - slug: RJ-2021-039
     title: 'StratigrapheR: Concepts for Litholog Generation in R '
     bibtitle: 'StratigrapheR: Concepts for Litholog Generation in R'
@@ -548,6 +557,7 @@ issues:
     - Psychometrics
     - Robust
     landing: '2021'
+    suppl: 21.9 Kb
   - slug: RJ-2021-040
     title: 'ROBustness In Network (robin): an R Package for Comparison and Validation
       of Communities '
@@ -639,6 +649,7 @@ issues:
     - Bayesian
     - Environmetrics
     landing: '2021'
+    suppl: 3 Kb
   - slug: RJ-2021-043
     title: 'RLumCarlo: Simulating Cold Light using Monte Carlo Methods'
     bibtitle: 'RLumCarlo: Simulating Cold Light using Monte Carlo Methods'
@@ -692,6 +703,7 @@ issues:
     - Phylogenetics
     - TeachingStatistics
     landing: '2021'
+    suppl: 2.4 Kb
   - slug: RJ-2021-044
     title: OneStep - Le Cam's one-step estimation procedure
     bibtitle: OneStep - Le Cam's one-step estimation procedure
@@ -712,6 +724,7 @@ issues:
     acknowledged: '2020-10-27'
     online: '2021-06-08'
     landing: '2021'
+    suppl: 5 Mb
   - slug: RJ-2021-045
     title: 'The R Package smicd: Statistical Methods for Interval-Censored Data'
     bibtitle: |-
@@ -800,6 +813,7 @@ issues:
     - HighPerformanceComputing
     - Psychometrics
     landing: '2021'
+    suppl: 709 bytes
   - slug: RJ-2021-047
     title: 'Working with CRSP/COMPUSTAT in R: Reproducible Empirical Asset Pricing'
     bibtitle: |-
@@ -839,6 +853,7 @@ issues:
     - ReproducibleResearch
     - TeachingStatistics
     landing: '2021'
+    suppl: 4.4 Kb
   - slug: RJ-2021-048
     title: A Unifying Framework for Parallel and Distributed Processing in R using
       Futures
@@ -966,6 +981,7 @@ issues:
     - SpatioTemporal
     - Survival
     landing: '2021'
+    suppl: 2.1 Kb
   - slug: RJ-2021-050
     title: 'Conversations in time: interactive visualisation to explore structured
       temporal data'
@@ -1013,7 +1029,7 @@ issues:
     - MissingData
     - Phylogenetics
     - Spatial
-    suppl: 8.4 Kb
+    suppl: 12.5 Kb
     landing: '2021'
   - slug: RJ-2021-051
     title: Automating Reproducible, Collaborative Clinical Trial Document Generation
@@ -1041,6 +1057,7 @@ issues:
     acknowledged: '2020-11-02'
     online: '2021-06-08'
     landing: '2021'
+    suppl: 4.4 Kb
   - slug: RJ-2021-052
     title: Towards a Grammar for Processing Clinical Trial Data
     bibtitle: Towards a Grammar for Processing Clinical Trial Data
@@ -1059,6 +1076,7 @@ issues:
     acknowledged: '2020-11-02'
     online: '2021-06-08'
     landing: '2021'
+    suppl: 7.9 Kb
   - slug: RJ-2021-053
     title: Reproducible Summary Tables with the gtsummary Package
     bibtitle: Reproducible Summary Tables with the gtsummary Package
@@ -1103,6 +1121,7 @@ issues:
     - Survival
     - WebTechnologies
     landing: '2021'
+    suppl: 8.4 Kb
   - slug: RJ-2021-054
     title: 'Regularized Transformation Models: The tramnet Package'
     bibtitle: 'Regularized Transformation Models: The tramnet Package'
@@ -1126,6 +1145,7 @@ issues:
     acknowledged: '2021-01-15'
     online: '2021-06-08'
     landing: '2021'
+    suppl: 3.6 Kb
   - slug: RJ-2021-055
     title: 'distr6: R6 Object-Oriented Probability Distributions Interface in R'
     bibtitle: |-
@@ -1169,6 +1189,7 @@ issues:
     - HighPerformanceComputing
     - Robust
     landing: '2021'
+    suppl: 1.7 Kb
   - slug: RJ-2021-056
     title: A Method for Deriving Information from Running R Code
     bibtitle: A Method for Deriving Information from Running R Code
@@ -1231,6 +1252,7 @@ issues:
     acknowledged: '2019-10-20'
     online: '2021-06-21'
     landing: '2021'
+    suppl: 1.2 Kb
   - slug: RJ-2021-057
     title: 'garchx: Flexible and Robust GARCH-X Modelling'
     bibtitle: 'garchx: Flexible and Robust GARCH-X Modelling'
@@ -1266,6 +1288,7 @@ issues:
     - MissingData
     - SpatioTemporal
     landing: '2021'
+    suppl: 3.4 Kb
   - slug: RJ-2021-059
     title: The HBV.IANIGLA Hydrological Model
     bibtitle: The HBV.IANIGLA Hydrological Model
@@ -1320,6 +1343,7 @@ issues:
     - Optimization
     - WebTechnologies
     landing: '2021'
+    suppl: 3.2 Kb
   - slug: RJ-2021-060
     title: 'gofCopula: Goodness-of-Fit Tests for Copulae'
     bibtitle: 'gofCopula: Goodness-of-Fit Tests for Copulae'
@@ -1400,6 +1424,7 @@ issues:
     - Econometrics
     - SocialSciences
     landing: '2021'
+    suppl: 75.7 Kb
   - slug: RJ-2021-062
     title: Unidimensional and Multidimensional Methods for Recurrence Quantification
       Analysis with crqa
@@ -1441,6 +1466,7 @@ issues:
     - TimeSeries
     - Finance
     landing: '2021'
+    suppl: 4.6 Kb
   - slug: RJ-2021-063
     title: 'stratamatch: Prognostic Score Stratification using a Pilot Design'
     bibtitle: |-
@@ -1491,7 +1517,7 @@ issues:
     - OfficialStatistics
     - Optimization
     - Survival
-    suppl: 1.8 Kb
+    suppl: 3.3 Kb
     landing: '2021'
   - slug: RJ-2021-064
     title: G2F as a Novel Tool to Find and Fill Gaps in Metabolic Networks
@@ -1571,6 +1597,7 @@ issues:
     - WebTechnologies
     - NaturalLanguageProcessing
     landing: '2021'
+    suppl: 852 bytes
   - slug: RJ-2021-066
     title: 'ROCnReg: An R Package for Receiver Operating Characteristic Curve Inference
       with and without Covariates'
@@ -1634,6 +1661,7 @@ issues:
     - SpatioTemporal
     - Survival
     landing: '2021'
+    suppl: 6.5 Kb
   - slug: RJ-2021-067
     title: A New Versatile Discrete Distribution
     bibtitle: A New Versatile Discrete Distribution
@@ -22821,4 +22849,3 @@ issues:
                 Porreca and Riccardo L. Rossi and Andrea Guzzo and
                 Roberta Sirovich and Andrea
     pages: '416'
-
