Remove 2020-1 demo in /_issues

--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ description: |
 base_url: https://rjournal-distill.netlify.app/
 theme: theme.css
 favicon: resources/favicon.ico
-output_dir: "_site"
+output_dir: "_web"
 navbar:
   search: true
   logo:
