Added missing acknowledged dates to articles without acknowledged status

--- a/_config.yml
+++ b/_config.yml
@@ -21597,7 +21597,7 @@ issues:
       the            finite sample performance of the methodology and illustrate the
       functionalities of the penPHcure            package using criminal recidivism
       data.'
-    acknowledged: []
+    acknowledged: '2020-02-14'
     online: '2021-06-21'
     CRANpkgs:
     - penPHcure
@@ -22144,7 +22144,7 @@ issues:
       handling of aggregated data, prediction,           and the presentation of estimation
       results. Cross-validation methods are provided which can be used           for
       model and bandwidth selection.1'
-    acknowledged: []
+    acknowledged: '2020-06-03'
     online: '2021-06-07'
     CRANpkgs:
     - sBF
@@ -22195,7 +22195,7 @@ issues:
       of models and stimulation modes,            start the simulation and render
       terminal and graphical feedback. The combination of MC clusters            supports
       the simulation of complex luminescence phenomena.'
-    acknowledged: []
+    acknowledged: '2020-07-06'
     online: '2021-06-07'
     CRANpkgs:
     - RLumCarlo
@@ -22328,7 +22328,7 @@ issues:
       by a parametric bootstrap in the linear            mixed regression model. To
       handle departures from the model assumptions, fixed (logarithmic) and            data-driven
       (Box-Cox) transformations are incorporated into the algorithm.'
-    acknowledged: []
+    acknowledged: '2020-07-23'
     online: '2021-06-08'
     CRANpkgs:
     - actuar
