--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - published
+  workflow_dispatch:
 
 jobs:
   jekyll:
@@ -21,6 +22,17 @@ jobs:
        uses: limjh16/jekyll-action-ts@v2
        with:
           enable_cache: true
+
+     - name: Checkout dev branch
+       uses: actions/checkout@v2
+       with:
+          ref: dev
+          path: dev-branch
+
+     - name: Move dev content
+       run: |
+          rm -rf _site/dev
+          mv dev-branch/_web _site/dev
 
      - name: deploy
        uses: peaceiris/actions-gh-pages@v3
