Remove {about} from nav

--- a/_site.yml
+++ b/_site.yml
@@ -20,8 +20,8 @@ navbar:
       href: issues.html
     - text: "Submit"
       href: submissions.html
-    - text: "About"
-      href: about.html
+    # - text: "About"
+    #   href: about.html
     - icon: fa fa-rss
       href: articles.xml
 rss:
