Fix suppl fields of 2021-1

--- a/_config.yml
+++ b/_config.yml
@@ -170,6 +170,7 @@ issues:
     acknowledged: '2019-10-20'
     online: '2021-07-15'
     landing: '2021'
+    suppl: 2.3 Kb
   - slug: RJ-2021-067
     title: A New Versatile Discrete Distribution
     bibtitle: A New Versatile Discrete Distribution
@@ -199,6 +200,7 @@ issues:
     - Distributions
     - Multivariate
     landing: '2021'
+    suppl: 1.2 Kb
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -21383,7 +21385,7 @@ issues:
     - survidm
     - KMsurv
     CTV_rev: Survival
-    suppl: unknown
+    suppl: 2.3 Kb
     landing: '2021'
     pages:
     - '21'
@@ -21410,7 +21412,7 @@ issues:
       workflow and no global side effects.'
     acknowledged: '2019-10-20'
     online: '2021-07-13'
-    suppl: unknown
+    suppl: 1.2 Kb
     landing: '2021'
     pages:
     - '42'
@@ -21439,7 +21441,7 @@ issues:
       useful tools to validate and evaluate            new joint modelling methods.'
     acknowledged: '2020-04-04'
     online: '2021-06-07'
-    suppl: unknown
+    suppl: 1.6 Kb
     landing: '2021'
     pages:
     - '53'
@@ -21482,7 +21484,7 @@ issues:
     - NaturalLanguageProcessing
     - Phylogenetics
     - TeachingStatistics
-    suppl: unknown
+    suppl: 136.9 Kb
     landing: '2021'
     pages:
     - '69'
@@ -21517,7 +21519,7 @@ issues:
     - Finance
     - Robust
     - SocialSciences
-    suppl: unknown
+    suppl: 3.6 Kb
     landing: '2021'
     pages:
     - '83'
@@ -21614,7 +21616,7 @@ issues:
     - Distributions
     - Econometrics
     - SocialSciences
-    suppl: unknown
+    suppl: 75.7 Kb
     landing: '2021'
     pages:
     - '116'
@@ -21665,7 +21667,7 @@ issues:
     - ReproducibleResearch
     - WebTechnologies
     - NaturalLanguageProcessing
-    suppl: unknown
+    suppl: 852 bytes
     landing: '2021'
     pages:
     - '130'
@@ -21710,7 +21712,7 @@ issues:
     CTV_rev:
     - TimeSeries
     - Finance
-    suppl: unknown
+    suppl: 4.6 Kb
     landing: '2021'
     pages:
     - '145'
@@ -21754,7 +21756,7 @@ issues:
     - HighPerformanceComputing
     - Phylogenetics
     - TeachingStatistics
-    suppl: unknown
+    suppl: 1.3 Kb
     landing: '2021'
     pages:
     - '164'
@@ -21803,7 +21805,7 @@ issues:
     - Phylogenetics
     - Spatial
     - TeachingStatistics
-    suppl: unknown
+    suppl: 151.5 Kb
     landing: '2021'
     pages:
     - '184'
@@ -21848,7 +21850,7 @@ issues:
     - spc
     - MPCI
     - edcc
-    suppl: unknown
+    suppl: 1.5 Kb
     landing: '2021'
     pages:
     - '194'
@@ -21938,7 +21940,7 @@ issues:
     - Econometrics
     - MachineLearning
     - SocialSciences
-    suppl: unknown
+    suppl: 2.7 Kb
     landing: '2021'
     pages:
     - '232'
@@ -21967,7 +21969,7 @@ issues:
     acknowledged: '2020-06-03'
     online: '2021-06-07'
     CRANpkgs: IndexNumber
-    suppl: unknown
+    suppl: 482 bytes
     landing: '2021'
     pages:
     - '253'
@@ -22005,7 +22007,7 @@ issues:
     - Environmetrics
     - MissingData
     - SpatioTemporal
-    suppl: unknown
+    suppl: 3.4 Kb
     landing: '2021'
     pages:
     - '276'
@@ -22113,7 +22115,7 @@ issues:
     - Phylogenetics
     - Psychometrics
     - Robust
-    suppl: unknown
+    suppl: 21.9 Kb
     landing: '2021'
     pages:
     - '310'
@@ -22160,7 +22162,7 @@ issues:
     - SocialSciences
     - Bayesian
     - Environmetrics
-    suppl: unknown
+    suppl: 3 Kb
     landing: '2021'
     pages:
     - '330'
@@ -22217,7 +22219,7 @@ issues:
     - NumericalMathematics
     - Phylogenetics
     - TeachingStatistics
-    suppl: unknown
+    suppl: 2.4 Kb
     landing: '2021'
     pages:
     - '351'
@@ -22242,7 +22244,7 @@ issues:
       size.'
     acknowledged: '2020-10-27'
     online: '2021-06-08'
-    suppl: unknown
+    suppl: 5 Mb
     landing: '2021'
     pages:
     - '366'
@@ -22300,7 +22302,7 @@ issues:
     - NumericalMathematics
     - Optimization
     - WebTechnologies
-    suppl: unknown
+    suppl: 3.2 Kb
     landing: '2021'
     pages:
     - '378'
@@ -22395,7 +22397,7 @@ issues:
     CTV_rev:
     - HighPerformanceComputing
     - Psychometrics
-    suppl: unknown
+    suppl: 709 bytes
     landing: '2021'
     pages:
     - '413'
@@ -22438,7 +22440,7 @@ issues:
     - Phylogenetics
     - ReproducibleResearch
     - TeachingStatistics
-    suppl: unknown
+    suppl: 4.4 Kb
     landing: '2021'
     pages:
     - '426'
@@ -22485,7 +22487,7 @@ issues:
     - Finance
     - HighPerformanceComputing
     - Robust
-    suppl: unknown
+    suppl: 1.7 Kb
     landing: '2021'
     pages:
     - '444'
@@ -22570,7 +22572,7 @@ issues:
     - Spatial
     - SpatioTemporal
     - Survival
-    suppl: unknown
+    suppl: 2.1 Kb
     landing: '2021'
     pages:
     - '499'
@@ -22622,7 +22624,7 @@ issues:
     - MissingData
     - Phylogenetics
     - Spatial
-    suppl: unknown
+    suppl: 12.5 Kb
     landing: '2021'
     pages:
     - '516'
@@ -22690,7 +22692,7 @@ issues:
     - Spatial
     - SpatioTemporal
     - Survival
-    suppl: unknown
+    suppl: 6.5 Kb
     landing: '2021'
     pages:
     - '525'
@@ -22720,7 +22722,7 @@ issues:
       as well as defining an analysis pipeline for document generation.'
     acknowledged: '2020-11-02'
     online: '2021-06-08'
-    suppl: unknown
+    suppl: 4.4 Kb
     landing: '2021'
     pages:
     - '556'
@@ -22742,7 +22744,7 @@ issues:
       package, which is currently being used for data of this kind.'
     acknowledged: '2020-11-02'
     online: '2021-06-08'
-    suppl: unknown
+    suppl: 7.9 Kb
     landing: '2021'
     pages:
     - '563'
@@ -22797,7 +22799,7 @@ issues:
     - SocialSciences
     - Survival
     - WebTechnologies
-    suppl: unknown
+    suppl: 8.4 Kb
     landing: '2021'
     pages:
     - '570'
@@ -22841,7 +22843,7 @@ issues:
     - Survival
     - Optimization
     - ClinicalTrials
-    suppl: unknown
+    suppl: 3.6 Kb
     landing: '2021'
     pages:
     - '581'
@@ -22961,7 +22963,7 @@ issues:
     - OfficialStatistics
     - Optimization
     - Survival
-    suppl: unknown
+    suppl: 3.3 Kb
     landing: '2021'
     pages:
     - '614'
