--- a/_config.yml
+++ b/_config.yml
@@ -201,6 +201,33 @@ issues:
     - Multivariate
     landing: '2021'
     suppl: 1.2 Kb
+  - slug: RJ-2021-069
+    title: 'Estimating Social Influence Effects in Networks Using A Latent Space Adjusted
+      Approach in R '
+    bibtitle: |-
+      Estimating Social Influence Effects in Networks Using A
+                Latent Space Adjusted Approach in R
+    author: Ran Xu
+    bibauthor: Ran Xu
+    abstract: ' Abstract Social influence effects have been extensively studied in
+      various empirical network research.           However, many challenges remain
+      in estimating social influence effects in networks, as influence           effects
+      are often entangled with other factors, such as homophily in the selection process
+      and the           common social-environmental factors that individuals are embedded
+      in. Methods currently available           either do not solve these problems
+      or require stringent assumptions. Recent works by Xu (2018) and           others
+      have shown that a latent-space adjusted approach based on the latent space model
+      has the           potential to disentangle the influence effects from other
+      processes, and the simulation evidence has           shown that this approach
+      outperforms other state-of-the-art approaches in terms of recovering the           true
+      social influence effect when there is an unobserved trait co-determining influence
+      and selection.           In this paper I will further illustrate how the latent-space
+      adjusted approach can account for bias in           the estimation of social
+      influence effects, and how this approach can be easily implemented in R.  '
+    acknowledged: []
+    online: '2021-08-17'
+    suppl: 3 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -23050,3 +23077,4 @@ issues:
     pages:
     - '648'
     - '653'
+
