--- a/_config.yml
+++ b/_config.yml
@@ -228,6 +228,58 @@ issues:
     online: '2021-08-17'
     suppl: 3 Kb
     landing: '2021'
+  - slug: RJ-2021-070
+    title: 'survidm: An R package for Inference and Prediction in an Illness-Death
+      Model'
+    bibtitle: |-
+      survidm: An R package for Inference and Prediction in an
+                Illness-Death Model
+    author:
+    - Gustavo Soutinho
+    - Marta Sestelo
+    - Luís Meira-Machado
+    bibauthor: Gustavo Soutinho and Marta Sestelo and Luís Meira-Machado
+    abstract: ' Abstract Multi-state models are a useful way of describing a process
+      in which an individual moves           through a number of finite states in
+      continuous time. The illness-death model plays a central role in           the
+      theory and practice of these models, describing the dynamics of healthy subjects
+      who may move           to an intermediate "diseased" state before entering into
+      a terminal absorbing state. In these models one           important goal is
+      the modeling of transition rates which is usually done by studying the relationship           between
+      covariates and disease evolution. However, biomedical researchers are also interested
+      in           reporting other interpretable results in a simple and summarized
+      manner. These include estimates           of predictive probabilities, such
+      as the transition probabilities, occupation probabilities, cumulative           incidence
+      functions and the sojourn time distributions. The development of survidm package
+      has           been motivated by recent contributions that provides answers to
+      all these topics. Illustration of the           software usage is included using
+      real data.  '
+    acknowledged: []
+    online: '2021-08-17'
+    CRANpkgs:
+    - survidm
+    - p3state.msm
+    - TPmsm
+    - etm
+    - mstate
+    - TP.idm
+    - msSurv
+    - ggplot2
+    - plotly
+    - survival
+    - KernSmooth
+    CTV_rev:
+    - Survival
+    - ClinicalTrials
+    - Econometrics
+    - Graphics
+    - Multivariate
+    - Phylogenetics
+    - SocialSciences
+    - TeachingStatistics
+    - WebTechnologies
+    suppl: 1.6 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
