RJ-2021-039 updated online

--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@ issues:
     bibauthor: |-
       Sébastien Wouters and Anne-Christine Da Silva and Frédéric
                 Boulvain and Xavier Devleeschouwer
-    abstract: '  Abstract The StratigrapheR package proposes new concepts for the
-      generation of lithological logs,            or lithologs, in R. The generation
-      of lithologs in a scripting environment opens new opportunities            for
-      the processing and analysis of stratified geological data. Among the new concepts
-      presented:            new plotting and data processing methodologies, new general
-      R functions, and computer-oriented            data conventions are provided.
-      The package structure allows for these new concepts to be further            improved,
-      which can be done independently by any R user. The current limitations of the
-      package are            highlighted, along with the limitations in R for geological
-      data processing, to help identify the best            paths for improvements.'
+    abstract: ' Abstract The StratigrapheR package proposes new concepts for the generation
+      of lithological logs,           or lithologs, in R. The generation of lithologs
+      in a scripting environment opens new opportunities           for the processing
+      and analysis of stratified geological data. Among the new concepts presented:           new
+      plotting and data processing methodologies, new general R functions, and computer-oriented           data
+      conventions are provided. The package structure allows for these new concepts
+      to be further           improved, which can be done independently by any R user.
+      The current limitations of the package are           highlighted, along with
+      the limitations in R for geological data processing, to help identify the best           paths
+      for improvements.  '
     acknowledged: '2020-06-03'
     online: '2021-06-07'
     CRANpkgs:
@@ -50,6 +50,7 @@ issues:
     - ModelDeployment
     - Multivariate
     - TeachingStatistics
+    suppl: 5.1 Kb
     landing: '2021'
   - slug: RJ-2021-048
     title: A Unifying Framework for Parallel and Distributed Processing in R using
