--- a/_config.yml
+++ b/_config.yml
@@ -281,6 +281,68 @@ issues:
     - WebTechnologies
     suppl: 1.6 Kb
     landing: '2021'
+  - slug: RJ-2021-071
+    title: 'dad: an R Package for Visualisation, Classification and Discrimination
+      of Multivariate Groups Modelled by their Densities'
+    bibtitle: |-
+      dad: an R Package for Visualisation, Classification and
+                Discrimination of Multivariate Groups Modelled by
+                their Densities
+    author:
+    - Rachid Boumaza
+    - Pierre Santagostini
+    - Smail Yousfi
+    - Sabine Demotes-Mainard
+    bibauthor: |-
+      Rachid Boumaza and Pierre Santagostini and Smail Yousfi and
+                Sabine Demotes-Mainard
+    abstract: ' Abstract Multidimensional scaling (MDS), hierarchical cluster analysis
+      (HCA) and discriminant           analysis (DA) are classical techniques which
+      deal with data made of n individuals and p variables.           When the individuals
+      are divided into T groups, the R package dad associates with each group a           multivariate
+      probability density function and then carries out these techniques on the densities
+      which           are estimated by the data under consideration. These techniques
+      are based on distance measures           between densities: chi-square, Hellinger,
+      Jeffreys, Jensen-Shannon and L p for discrete densities,           Hellinger
+      , Jeffreys, L2 and 2-Wasserstein for Gaussian densities, and L2 for numeric
+      non Gaussian           densities estimated by the Gaussian kernel method. Practical
+      methods help the user to give meaning           to the outputs in the context
+      of MDS and HCA, and to look for an optimal prediction in the context of           DA
+      based on the one-leave-out misclassification ratio. Some functions for data
+      management or basic           statistics calculations on groups are annexed.  '
+    acknowledged: '2020-10-13'
+    online: '2021-08-17'
+    CRANpkgs:
+    - stats
+    - MASS
+    - ade4
+    - FactoMineR
+    - cluster
+    - dad
+    - fda
+    - fda.usc
+    - fdadensity
+    - compositions
+    - Compositional
+    - robCompositions
+    CTV_rev:
+    - Multivariate
+    - Distributions
+    - Environmetrics
+    - FunctionalData
+    - Psychometrics
+    - Robust
+    - ChemPhys
+    - Cluster
+    - Econometrics
+    - Graphics
+    - MissingData
+    - NumericalMathematics
+    - SocialSciences
+    - Spatial
+    - TeachingStatistics
+    suppl: 2.6 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
