--- a/_config.yml
+++ b/_config.yml
@@ -343,6 +343,34 @@ issues:
     - TeachingStatistics
     suppl: 2.6 Kb
     landing: '2021'
+  - slug: RJ-2021-072
+    title: 'diproperm: An R Package for the DiProPerm Test'
+    bibtitle: 'diproperm: An R Package for the DiProPerm Test'
+    author:
+    - Andrew G. Allmon
+    - J.S. Marron
+    - Michael G. Hudgens
+    bibauthor: Andrew G. Allmon and J.S. Marron and Michael G. Hudgens
+    abstract: ' Abstract High-dimensional low sample size (HDLSS) data sets emerge
+      frequently in many biomedical           applications. The direction-projection-permutation
+      (DiProPerm) test is a two-sample hypothesis test           for comparing two
+      high-dimensional distributions. The DiProPerm test is exact, i.e., the type
+      I error           is guaranteed to be controlled at the nominal level for any
+      sample size, and thus is applicable in           the HDLSS setting. This paper
+      discusses the key components of the DiProPerm test, introduces the           diproperm
+      R package, and demonstrates the package on a real-world data set.  '
+    acknowledged: '2020-10-30'
+    online: '2021-08-17'
+    CRANpkgs:
+    - diproperm
+    - DWDLargeR
+    - Matrix
+    CTV_rev:
+    - Econometrics
+    - Multivariate
+    - NumericalMathematics
+    suppl: 840 bytes
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
