--- a/_config.yml
+++ b/_config.yml
@@ -371,6 +371,51 @@ issues:
     - NumericalMathematics
     suppl: 840 bytes
     landing: '2021'
+  - slug: RJ-2021-073
+    title: 'MatchThem:: Matching and Weighting after Multiple Imputation'
+    bibtitle: 'MatchThem:: Matching and Weighting after Multiple Imputation'
+    author:
+    - Farhad Pishgar
+    - Noah Greifer
+    - Clémence Leyrat
+    - Elizabeth Stuart
+    bibauthor: |-
+      Farhad Pishgar and Noah Greifer and Clémence Leyrat and
+                Elizabeth Stuart
+    abstract: ' Abstract Balancing the distributions of the confounders across the
+      exposure levels in an observational           study through matching or weighting
+      is an accepted method to control for confounding due to these           variables
+      when estimating the association between an exposure and outcome and to reduce
+      the degree           of dependence on certain modeling assumptions. Despite
+      the increasing popularity in practice, these           procedures cannot be
+      immediately applied to datasets with missing values. Multiple imputation of           the
+      missing data is a popular approach to account for missing values while preserving
+      the number of           units in the dataset and accounting for the uncertainty
+      in the missing values. However, to the best           of our knowledge, there
+      is no comprehensive matching and weighting software that can be easily           implemented
+      with multiply imputed datasets. In this paper, we review this problem and suggest
+      a           framework to map out the matching and weighting multiply imputed
+      datasets to 5 actions as well as           the best practices to assess balance
+      in these datasets after matching and weighting. We also illustrate           these
+      approaches using a companion package for R, MatchThem.  '
+    acknowledged: '2020-10-30'
+    online: '2021-08-17'
+    CRANpkgs:
+    - MatchThem
+    - MatchIt
+    - WeightIt
+    - cobalt
+    - mice
+    - Amelia
+    - survey
+    CTV_rev:
+    - OfficialStatistics
+    - SocialSciences
+    - MissingData
+    - Multivariate
+    - Survival
+    suppl: 764 bytes
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
