--- a/_config.yml
+++ b/_config.yml
@@ -416,6 +416,27 @@ issues:
     - Survival
     suppl: 764 bytes
     landing: '2021'
+  - slug: RJ-2021-074
+    title: 'MAINT.Data: Modelling and Analysing Interval Data in R'
+    bibtitle: 'MAINT.Data: Modelling and Analysing Interval Data in R'
+    author:
+    - A. Pedro Duarte Silva
+    - Paula Brito
+    - Peter Filzmoser
+    - José G. Dias
+    bibauthor: |-
+      A. Pedro Duarte Silva and Paula Brito and Peter Filzmoser
+                and José G. Dias
+    abstract: ' Abstract We present the CRAN R package MAINT.Data for the modelling
+      and analysis of multivariate           interval data, i.e., where units are
+      described by variables whose values are intervals of IR, representing           intrinsic
+      variability. Parametric inference methodologies based on probabilistic models
+      for interval           variables have been developed, where each interval is
+      represented by its midpoint and log-range, for'
+    acknowledged: '2020-10-30'
+    online: '2021-08-17'
+    suppl: 1.3 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
