--- a/_config.yml
+++ b/_config.yml
@@ -437,6 +437,55 @@ issues:
     online: '2021-08-17'
     suppl: 1.3 Kb
     landing: '2021'
+  - slug: RJ-2021-075
+    title: 'tramME: Mixed-Effects Transformation Models Using Template Model Builder'
+    bibtitle: |-
+      tramME: Mixed-Effects Transformation Models Using Template
+                Model Builder
+    author:
+    - Bálint Tamási
+    - Torsten Hothorn
+    bibauthor: Bálint Tamási and Torsten Hothorn
+    abstract: ' Abstract Linear transformation models constitute a general family
+      of parametric regression models           for discrete and continuous responses.
+      To accommodate correlated responses, the model is extended           by incorporating
+      mixed effects. This article presents the R package tramME, which builds on existing           implementations
+      of transformation models (mlt and tram packages) as well as Laplace approximation           and
+      automatic differentiation (using the TMB package), to calculate estimates and
+      perform likelihood           inference in mixed-effects transformation models.
+      The resulting framework can be readily applied to a           wide range of
+      regression problems with grouped data structures.  '
+    acknowledged: '2020-11-02'
+    online: '2021-08-17'
+    CRANpkgs:
+    - nlme
+    - lme4
+    - tramME
+    - mlt
+    - tram
+    - TMB
+    - glmmTMB
+    - survival
+    - boxcoxmix
+    - ordinalCont
+    - coxme
+    - parfm
+    - frailtypack
+    - ordinal
+    CTV_rev:
+    - Survival
+    - Econometrics
+    - Psychometrics
+    - SocialSciences
+    - Environmetrics
+    - OfficialStatistics
+    - SpatioTemporal
+    - ChemPhys
+    - ClinicalTrials
+    - Finance
+    - Spatial
+    suppl: 6 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
