--- a/_config.yml
+++ b/_config.yml
@@ -486,6 +486,34 @@ issues:
     - Spatial
     suppl: 6 Kb
     landing: '2021'
+  - slug: RJ-2021-076
+    title: 'CompModels: A Suite of Computer Model Test Functions for Bayesian Optimization'
+    bibtitle: |-
+      CompModels: A Suite of Computer Model Test Functions for
+                Bayesian Optimization
+    author: Tony Pourmohamad
+    bibauthor: Tony Pourmohamad
+    abstract: ' Abstract The CompModels package for R provides a suite of computer
+      model test functions that           can be used for computer model prediction/emulation,
+      uncertainty quantification, and calibration.           Moreover, the CompModels
+      package is especially well suited for the sequential optimization of           computer
+      models. The package is a mix of real-world physics problems, known mathematical           functions,
+      and black-box functions that have been converted into computer models with the
+      goal of           Bayesian (i.e., sequential) optimization in mind. Likewise,
+      the package contains computer models           that represent either the constrained
+      or unconstrained optimization case, each with varying levels of           difficulty.
+      In this paper, we illustrate the use of the package with both real-world examples
+      and black          box functions by solving constrained optimization problems
+      via Bayesian optimization. Ultimately, the           package is shown to provide
+      users with a source of computer model test functions that are reproducible,           shareable,
+      and that can be used for benchmarking of novel optimization methods.  '
+    acknowledged: '2021-02-22'
+    online: '2021-08-17'
+    CRANpkgs:
+    - CompModels
+    - laGP
+    suppl: 1 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
