--- a/_config.yml
+++ b/_config.yml
@@ -514,6 +514,68 @@ issues:
     - laGP
     suppl: 1 Kb
     landing: '2021'
+  - slug: RJ-2021-077
+    title: 'volesti: Volume Approximation and Sampling for Convex Polytopes in R'
+    bibtitle: |-
+      volesti: Volume Approximation and Sampling for Convex
+                Polytopes in R
+    author:
+    - Apostolos Chalkis
+    - Vissarion Fisikopoulos
+    bibauthor: Apostolos Chalkis and Vissarion Fisikopoulos
+    abstract: ' Abstract Sampling from high dimensional distributions and volume approximation
+      of convex bodies           are fundamental operations that appear in optimization,
+      finance, engineering, artificial intelligence and           machine learning.
+      In this paper we present volesti, an R package that provides efficient, scalable
+      algo          rithms for volume estimation, uniform and Gaussian sampling from
+      convex polytopes. volesti scales           to hundreds of dimensions, handles
+      efficiently three different types of polyhedra and provides non           existing
+      sampling routines to R. We demonstrate the power of volesti by solving several
+      challenging           problems using the R language.  '
+    acknowledged: '2021-04-12'
+    online: '2021-08-17'
+    CRANpkgs:
+    - volesti
+    - tmg
+    - multinomineq
+    - lineqGPR
+    - restrictedMVN
+    - tmvmixnorm
+    - hitandrun
+    - limSolve
+    - HybridMC
+    - rhmc
+    - mcmc
+    - MHadaptive
+    - geometry
+    - Rcpp
+    - Rfast
+    - coda
+    - SimplicialCubature
+    - cubature
+    - stats
+    - methods
+    - BH
+    - RcppEigen
+    - testthat
+    - ggplot2
+    - plotly
+    - rgl
+    CTV_rev:
+    - NumericalMathematics
+    - Bayesian
+    - Graphics
+    - Multivariate
+    - Distributions
+    - gR
+    - HighPerformanceComputing
+    - Optimization
+    - Phylogenetics
+    - SpatioTemporal
+    - TeachingStatistics
+    - WebTechnologies
+    suppl: 3.6 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
