--- a/_config.yml
+++ b/_config.yml
@@ -576,6 +576,26 @@ issues:
     - WebTechnologies
     suppl: 3.6 Kb
     landing: '2021'
+  - slug: RJ-2021-078
+    title: Elliptical Symmetry Tests in R
+    bibtitle: Elliptical Symmetry Tests in R
+    author:
+    - Slađana Babić
+    - Christophe Ley
+    - Marko Palangetić
+    bibauthor: Slađana Babić and Christophe Ley and Marko Palangetić
+    abstract: ' Abstract The assumption of elliptical symmetry has an important role
+      in many theoretical           developments and applications, hence it is of
+      primary importance to be able to test whether that           assumption actually
+      holds true or not. Various tests have been proposed in the literature for this           problem.
+      To the best of our knowledge, none of them has been implemented in R. This article           describes
+      the R package ellipticalsymmetry which implements several well-known tests for
+      elliptical           symmetry together with some recent tests. We demonstrate
+      the testing procedures with a real data           example.  '
+    acknowledged: '2021-04-12'
+    online: '2021-08-17'
+    suppl: 1.5 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
