--- a/_config.yml
+++ b/_config.yml
@@ -596,6 +596,38 @@ issues:
     online: '2021-08-17'
     suppl: 1.5 Kb
     landing: '2021'
+  - slug: RJ-2021-079
+    title: 'lg: An R package for Local Gaussian Approximations'
+    bibtitle: 'lg: An R package for Local Gaussian Approximations'
+    author: Håkon Otneim
+    bibauthor: Håkon Otneim
+    abstract: ' Abstract The package lg for the R programming language provides implementations
+      of recent           methodological advances on applications of the local Gaussian
+      correlation. This includes estimation of           the local Gaussian correlation
+      itself, multivariate density estimation, conditional density estimation,           various
+      tests for independence and conditional independence, as well as a graphical
+      module for           creating dependence maps. This paper describes the lg package,
+      its principles, and its practical use.  '
+    acknowledged: '2020-04-04'
+    online: '2021-09-20'
+    CRANpkgs:
+    - lg
+    - localgauss
+    - magrittr
+    - dplyr
+    - ggplot2
+    - mvtnorm
+    CTV_rev:
+    - Databases
+    - Distributions
+    - Finance
+    - Graphics
+    - ModelDeployment
+    - Multivariate
+    - Phylogenetics
+    - TeachingStatistics
+    - WebTechnologies
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
