--- a/_config.yml
+++ b/_config.yml
@@ -628,6 +628,45 @@ issues:
     - TeachingStatistics
     - WebTechnologies
     landing: '2021'
+  - slug: RJ-2021-080
+    title: Multiple Imputation and Synthetic Data Generation with the R Package NPBayesImputeCat
+    bibtitle: |-
+      Multiple Imputation and Synthetic Data Generation with the R
+                Package NPBayesImputeCat
+    author:
+    - Jingchen Hu
+    - Olanrewaju Akande
+    - Quanli Wang
+    bibauthor: Jingchen Hu and Olanrewaju Akande and Quanli Wang
+    abstract: ' Abstract In many contexts, missing data and disclosure control are
+      ubiquitous and challenging           issues. In particular at statistical agencies,
+      the respondent-level data they collect from surveys and           censuses can
+      suffer from high rates of missingness. Furthermore, agencies are obliged to
+      protect           respondents’ privacy when publishing the collected data for
+      public use. The NPBayesImputeCat R           package, introduced in this paper,
+      provides routines to i) create multiple imputations for missing data,           and
+      ii) create synthetic data for statistical disclosure control, for multivariate
+      categorical data, with           or without structural zeros. We describe the
+      Dirichlet process mixture of products of multinomial           distributions
+      model used in the package, and illustrate various uses of the package using
+      data samples           from the American Community Survey (ACS). We also compare
+      results of the missing data imputation           to the mice R package and those
+      of the synthetic data generation to the synthpop R package.  '
+    acknowledged: '2020-05-01'
+    online: '2021-09-20'
+    CRANpkgs:
+    - NPBayesImputeCat
+    - mice
+    - synthpop
+    - bayesplot
+    - tidyverse
+    CTV_rev:
+    - MissingData
+    - OfficialStatistics
+    - Multivariate
+    - SocialSciences
+    suppl: 2.5 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
