--- a/_config.yml
+++ b/_config.yml
@@ -667,6 +667,26 @@ issues:
     - SocialSciences
     suppl: 2.5 Kb
     landing: '2021'
+  - slug: RJ-2021-081
+    title: A GUIded tour of Bayesian regression
+    bibtitle: A GUIded tour of Bayesian regression
+    author:
+    - Andrés Ramírez–Hassan
+    - Mateo Graciano-Londoño
+    bibauthor: Andrés Ramírez–Hassan and Mateo Graciano-Londoño
+    abstract: ' Abstract This paper presents a graphical user interface (GUI) to carry
+      out a Bayesian regression           analysis in a very friendly environment
+      without any programming skills (drag and drop). This paper           is designed
+      for teaching and applied purposes at an introductory level. Our GUI is based
+      on an           interactive web application using shiny, and libraries from
+      R. We carry out some applications to           highlight the potential of our
+      GUI for applied researchers and practitioners. In addition, the Help           option
+      in the main tap panel has an extended version of this paper, where we present
+      the basic theory           underlying all regression models that we developed
+      in our GUI, and more applications associated           with each model.  '
+    acknowledged: '2020-06-03'
+    online: '2021-09-20'
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
