--- a/_config.yml
+++ b/_config.yml
@@ -687,6 +687,40 @@ issues:
     acknowledged: '2020-06-03'
     online: '2021-09-20'
     landing: '2021'
+  - slug: RJ-2021-082
+    title: 'miRecSurv Package: Prentice-Williams-Peterson Models with Multiple Imputation
+      of Unknown Number of Previous Episodes'
+    bibtitle: |-
+      miRecSurv Package: Prentice-Williams-Peterson Models with
+                Multiple Imputation of Unknown Number of Previous
+                Episodes
+    author:
+    - David Moriña
+    - Gilma Hernández-Herrera
+    - Albert Navarro
+    bibauthor: David Moriña and Gilma Hernández-Herrera and Albert Navarro
+    abstract: ' Abstract Left censoring can occur with relative frequency when analysing
+      recurrent events in epi          demiological studies, especially observational
+      ones. Concretely, the inclusion of individuals that           were already at
+      risk before the effective initiation in a cohort study, may cause the unawareness
+      of           prior episodes that have already been experienced, and this will
+      easily lead to biased and inefficient           estimates. The miRecSurv package
+      is based on the use of models with specific baseline hazard, with           multiple
+      imputation of the number of prior episodes when unknown by means of the COMPoisson           distribution,
+      a very flexible count distribution that can handle over-, suband equidispersion,
+      with a           stratified model depending on whether the individual had or
+      had not previously been at risk, and the           use of a frailty term. The
+      usage of the package is illustrated by means of a real data example based on           a
+      occupational cohort study and a simulation study.  '
+    acknowledged: []
+    online: '2021-09-20'
+    CRANpkgs:
+    - miRecSurv
+    - compoisson
+    - survsim
+    CTV_rev: Survival
+    suppl: 2.9 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
