--- a/_config.yml
+++ b/_config.yml
@@ -721,6 +721,56 @@ issues:
     CTV_rev: Survival
     suppl: 2.9 Kb
     landing: '2021'
+  - slug: RJ-2021-083
+    title: 'bcmixed: A Package for Median Inference on Longitudinal Data with the
+      Box–Cox Transformation'
+    bibtitle: |-
+      bcmixed: A Package for Median Inference on Longitudinal Data
+                with the Box–Cox Transformation
+    author:
+    - Kazushi Maruo
+    - Ryota Ishii
+    - Yusuke Yamaguchi
+    - Masahiko Gosho
+    bibauthor: |-
+      Kazushi Maruo and Ryota Ishii and Yusuke Yamaguchi and
+                Masahiko Gosho
+    abstract: ' Abstract This article illustrates the use of the bcmixed package and
+      focuses on the two main functions:           bcmarg and bcmmrm. The bcmarg function
+      provides inference results for a marginal model of a mixed ef          fect
+      model using the Box–Cox transformation. The bcmmrm function provides model median
+      inferences           based on the mixed effect models for repeated measures
+      analysis using the Box–Cox transformation for           longitudinal randomized
+      clinical trials. Using the bcmmrm function, analysis results with high power           and
+      high interpretability for treatment effects can be obtained for longitudinal
+      randomized clinical           trials with skewed outcomes. Further, the bcmixed
+      package provides summarizing and visualization           tools, which would
+      be helpful to write clinical trial reports.  '
+    acknowledged: []
+    online: '2021-09-20'
+    CRANpkgs:
+    - nlme
+    - glme
+    - lme4
+    - CLME
+    - PLmixed
+    - MCMCglmm
+    - bcmixed
+    - MissMech
+    CTV_rev:
+    - Psychometrics
+    - SocialSciences
+    - Econometrics
+    - Environmetrics
+    - OfficialStatistics
+    - SpatioTemporal
+    - Bayesian
+    - ChemPhys
+    - Finance
+    - Phylogenetics
+    - Spatial
+    - Survival
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
