--- a/_config.yml
+++ b/_config.yml
@@ -771,6 +771,46 @@ issues:
     - Spatial
     - Survival
     landing: '2021'
+  - slug: RJ-2021-085
+    title: 'spfilteR: An R Package for Semiparametric Spatial Filtering with Eigenvectors
+      in (Generalized) Linear Models'
+    bibtitle: |-
+      spfilteR: An R Package for Semiparametric Spatial Filtering
+                with Eigenvectors in (Generalized) Linear Models
+    author: Sebastian Juhl
+    bibauthor: Sebastian Juhl
+    abstract: ' Abstract Eigenvector-based spatial filtering constitutes a highly
+      flexible semiparametric approach           to account for spatial autocorrelation
+      in a regression framework. It combines judiciously selected           eigenvectors
+      from a transformed connectivity matrix to construct a synthetic spatial filter
+      and remove           spatial patterns from model residuals. This article introduces
+      the spfilteR package that provides           several useful and flexible tools
+      to estimate spatially filtered linear and generalized linear models in           R.
+      While the package features functions to identify relevant eigenvectors based
+      on different selection           criteria in an unsupervised fashion, it also
+      helps users to perform supervised spatial filtering and to           select
+      eigenvectors based on alternative user-defined criteria. After a brief discussion
+      of the eigenvector          based spatial filtering approach, this article presents
+      the main functions of the package and illustrates           their usage. A comparison
+      to alternative implementations in other R packages highlights the added           value
+      of the spfilteR package.  '
+    acknowledged: '2021-01-15'
+    online: '2021-09-20'
+    CRANpkgs:
+    - spfilteR
+    - spatialreg
+    - spmoran
+    - adespatial
+    - vegan
+    CTV_rev:
+    - Spatial
+    - Econometrics
+    - Environmetrics
+    - Multivariate
+    - Phylogenetics
+    - Psychometrics
+    suppl: 1.5 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
