--- a/_config.yml
+++ b/_config.yml
@@ -179,29 +179,28 @@ issues:
     bibauthor: Rolf Turner
     abstract: ' Abstract This paper introduces a new flexible distribution for discrete
       data. Approximate moment           estimators of the parameters of the distribution,
-      for use as starting values for a numerical maximum           likelihood procedure,
-      are discussed. The quality of the maximum likelihood estimates is assessed           via
-      simulation experiments. Several examples are given of fitting instances of the
-      new distribution to           real and simulated data. It is noted that the
-      new distribution is a member of the exponential family.           Expressions
-      for the gradient and hessian of the log likelihood of the new distribution are
-      derived.           The former facilitates the numerical maximisation of the
-      likelihood with optim(); the latter provides           means of calculating
-      or estimating the covariance matrix of of the parameter estimates. A discrepancy           between
-      estimates of the covariance matrix obtained by inverting the hessian and those
-      obtained by           Monte Carlo methods is discussed.  '
+      to be used as starting values for numerical opti          mization procedures,
+      are discussed. “Exact” moment estimation, effected via a numerical procedure,           and
+      maximum likelihood estimation, are considered. The quality of the results produced
+      by these           estimators is assessed via simulation experiments. Several
+      examples are given of fitting instances of           the new distribution to
+      real and simulated data. It is noted that the new distribution is a member           of
+      the exponential family. Expressions for the gradient and Hessian of the log-likelihood
+      of the new           distribution are derived. The former facilitates the numerical
+      maximization of the likelihood with           optim(); the latter provides means
+      of calculating or estimating the covariance matrix of of the parame          ter
+      estimates. A discrepancy between estimates of the covariance matrix obtained
+      by inverting the           Hessian and those obtained by Monte Carlo methods
+      is discussed.  '
     acknowledged: '2021-01-15'
     online: '2021-07-15'
     CRANpkgs:
     - hmm.discnp
+    - spcadjust
     - rmutil
-    - dbd
-    - ellipse
-    CTV_rev:
-    - Distributions
-    - Multivariate
+    CTV_rev: Distributions
+    suppl: 3.9 Kb
     landing: '2021'
-    suppl: 1.2 Kb
   - slug: RJ-2021-069
     title: 'Estimating Social Influence Effects in Networks Using A Latent Space Adjusted
       Approach in R '
