--- a/_config.yml
+++ b/_config.yml
@@ -810,6 +810,44 @@ issues:
     - Psychometrics
     suppl: 1.5 Kb
     landing: '2021'
+  - slug: RJ-2021-086
+    title: 'The vote Package: Single Transferable Vote and Other Electoral Systems
+      in R'
+    bibtitle: |-
+      The vote Package: Single Transferable Vote and Other
+                Electoral Systems in R
+    author:
+    - Adrian E. Raftery
+    - Hana Ševčíková
+    - Bernard W. Silverman
+    bibauthor: |-
+      Adrian E. Raftery and Hana Ševčíková and Bernard W.
+                Silverman
+    abstract: ' Abstract We describe the vote package in R, which implements the plurality
+      (or first-past-the-post),           two-round runoff, score, approval and single
+      transferable vote (STV) electoral systems, as well as           methods for
+      selecting the Condorcet winner and loser. We emphasize the STV system, which
+      we have           found to work well in practice for multi-winner elections
+      with small electorates, such as committee           and council elections, and
+      the selection of multiple job candidates. For single-winner elections, the           STV
+      is also called instant runoff voting (IRV), ranked choice voting (RCV), or the
+      alternative vote (AV)           system. The package also implements the STV
+      system with equal preferences, for the first time in a           software package,
+      to our knowledge. It also implements a new variant of STV, in which a minimum           number
+      of candidates from a specified group are required to be elected. We illustrate
+      the package with           several real examples.  '
+    acknowledged: '2021-05-03'
+    online: '2021-09-20'
+    CRANpkgs:
+    - vote
+    - votesys
+    - rcv
+    - STV
+    - HighestMedianRules
+    - electoral
+    - esaps
+    suppl: 1.3 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
