--- a/_config.yml
+++ b/_config.yml
@@ -1095,6 +1095,63 @@ issues:
     - gR
     suppl: 3 Kb
     landing: '2021'
+  - slug: RJ-2021-088
+    title: 'PAsso: an R Package for Assessing Partial Association between Ordinal
+      Variables'
+    bibtitle: |-
+      PAsso: an R Package for Assessing Partial Association
+                between Ordinal Variables
+    author:
+    - Shaobo Li
+    - Xiaorui Zhu
+    - Yuejie Chen
+    - Dungang Liu
+    bibauthor: Shaobo Li and Xiaorui Zhu and Yuejie Chen and Dungang Liu
+    abstract: ' Abstract Partial association, the dependency between variables after
+      adjusting for a set of covariates,           is an important statistical notion
+      for scientific research. However, if the variables of interest are           ordered
+      categorical data, the development of statistical methods and software for assessing
+      their           partial association is limited. Following the framework established
+      by (Liu et al., 2021), we develop an           R package PAsso for assessing
+      Partial Associations between ordinal variables. The package provides           various
+      functions that allow users to perform a wide spectrum of assessment, including
+      quantification,           visualization and hypothesis testing. In this paper,
+      we discuss the implementation of PAsso in detail,           and demonstrate
+      its utility through an analysis of the 2016 American National Election Study.  '
+    acknowledged: '2020-10-19'
+    online: '2021-10-19'
+    CRANpkgs:
+    - PAsso
+    - sure
+    - MASS
+    - stats
+    - pcaPP
+    - copBasic
+    - rms
+    - ordinal
+    - VGAM
+    - GGally
+    - ggplot2
+    - plotly
+    CTV_rev:
+    - Econometrics
+    - Psychometrics
+    - Distributions
+    - Multivariate
+    - SocialSciences
+    - Environmetrics
+    - Robust
+    - Survival
+    - TeachingStatistics
+    - ChemPhys
+    - ExtremeValue
+    - Graphics
+    - NumericalMathematics
+    - Phylogenetics
+    - ReproducibleResearch
+    - WebTechnologies
+    suppl: 1 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
