--- a/_config.yml
+++ b/_config.yml
@@ -1152,6 +1152,128 @@ issues:
     - WebTechnologies
     suppl: 1 Kb
     landing: '2021'
+  - slug: RJ-2021-090
+    title: Robust and Efficient Optimization Using a Marquardt-Levenberg Algorithm
+      with R Package marqLevAlg
+    bibtitle: |-
+      Robust and Efficient Optimization Using a Marquardt-
+                Levenberg Algorithm with R Package marqLevAlg
+    author:
+    - Viviane Philipps
+    - Boris P. Hejblum
+    - Mélanie Prague
+    - Daniel Commenges
+    - Cécile Proust-Lima
+    bibauthor: |-
+      Viviane Philipps and Boris P. Hejblum and Mélanie Prague and
+                Daniel Commenges and Cécile Proust-Lima
+    abstract: ' Abstract Implementations in R of classical general-purpose algorithms
+      for local optimization generally           have two major limitations which
+      cause difficulties in applications to complex problems: too loose           convergence
+      criteria and too long calculation time. By relying on a Marquardt-Levenberg
+      algorithm           (MLA), a Newton-like method particularly robust for solving
+      local optimization problems, we provide           with marqLevAlg package an
+      efficient and general-purpose local optimizer which (i) prevents con          vergence
+      to saddle points by using a stringent convergence criterion based on the relative
+      distance           to minimum/maximum in addition to the stability of the parameters
+      and of the objective function;           and (ii) reduces the computation time
+      in complex settings by allowing parallel calculations at each           iteration.
+      We demonstrate through a variety of cases from the literature that our implementation
+      reli          ably and consistently reaches the optimum (even when other optimizers
+      fail), and also largely reduces           computational time in complex settings
+      through the example of maximum likelihood estimation of           different
+      sophisticated statistical models .  '
+    acknowledged: '2020-10-30'
+    online: '2021-10-19'
+    CRANpkgs:
+    - base
+    - optimx
+    - minpack.lm
+    - nlmrt
+    - marqLevAlg
+    - doParallel
+    - foreach
+    - JM
+    - lcmm
+    - optimParallel
+    - optim
+    - roptim
+    - DEoptim
+    - GA
+    - rgenoud
+    - hydroPSO
+    CTVs: Optimization
+    CTV_rev:
+    - Optimization
+    - HighPerformanceComputing
+    - ChemPhys
+    - Cluster
+    - Hydrology
+    - MachineLearning
+    - Survival
+    suppl: 16.7 Mb
+    landing: '2021'
+  - slug: RJ-2021-089
+    title: Robust and Efficient Optimization Using a Marquardt-Levenberg Algorithm
+      with R Package marqLevAlg
+    bibtitle: |-
+      Robust and Efficient Optimization Using a Marquardt-
+                Levenberg Algorithm with R Package marqLevAlg
+    author:
+    - Viviane Philipps
+    - Boris P. Hejblum
+    - Mélanie Prague
+    - Daniel Commenges
+    - Cécile Proust-Lima
+    bibauthor: |-
+      Viviane Philipps and Boris P. Hejblum and Mélanie Prague and
+                Daniel Commenges and Cécile Proust-Lima
+    abstract: ' Abstract Implementations in R of classical general-purpose algorithms
+      for local optimization generally           have two major limitations which
+      cause difficulties in applications to complex problems: too loose           convergence
+      criteria and too long calculation time. By relying on a Marquardt-Levenberg
+      algorithm           (MLA), a Newton-like method particularly robust for solving
+      local optimization problems, we provide           with marqLevAlg package an
+      efficient and general-purpose local optimizer which (i) prevents con          vergence
+      to saddle points by using a stringent convergence criterion based on the relative
+      distance           to minimum/maximum in addition to the stability of the parameters
+      and of the objective function;           and (ii) reduces the computation time
+      in complex settings by allowing parallel calculations at each           iteration.
+      We demonstrate through a variety of cases from the literature that our implementation
+      reli          ably and consistently reaches the optimum (even when other optimizers
+      fail), and also largely reduces           computational time in complex settings
+      through the example of maximum likelihood estimation of           different
+      sophisticated statistical models .  '
+    acknowledged: '2020-10-30'
+    online: '2021-10-19'
+    CRANpkgs:
+    - base
+    - optimx
+    - minpack.lm
+    - nlmrt
+    - marqLevAlg
+    - doParallel
+    - foreach
+    - JM
+    - lcmm
+    - optimParallel
+    - optim
+    - roptim
+    - DEoptim
+    - GA
+    - rgenoud
+    - hydroPSO
+    CTVs: Optimization
+    CTV_rev:
+    - Optimization
+    - HighPerformanceComputing
+    - ChemPhys
+    - Cluster
+    - Hydrology
+    - MachineLearning
+    - Survival
+    suppl: 16.7 Mb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
